Styles: Tiny spacing fix for query sort dropdown

--- a/src/assets/styles/components/_note-query.component.sass
+++ b/src/assets/styles/components/_note-query.component.sass
@@ -45,7 +45,9 @@ note-query
     letter-spacing: 1.2px
 
   .sort-dropdown
+    position: relative
     display: inline-block
+    top: -2px // magic number, too lazy to figure out why this is necessary
     width: 150px;
     margin-right: 4px
 
